--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Hind+Siliguri:wght@500&family=IBM+Plex+Sans+Thai+Looped:wght@400;500&family=Indie+Flower&family=Montserrat&family=Montserrat+Alternates&family=Open+Sans:wght@300;400&family=Roboto&family=Rock+3D&family=Varela+Round&display=swap');
+
 body{
     text-align: center;
     margin: 0 auto;
     max-width: 600px;
+ font-family: 'Hind Siliguri', sans-serif;
     }
