--- a/src/ToDoList.css
+++ b/src/ToDoList.css
@@ -5,6 +5,14 @@ h1 {
 letter-spacing: 8px;
 font-size: 50px;
 }
+.ToDoList h2{
+    letter-spacing: 8px;
+    text-align: left;
+    margin-top: 90px;
+    margin-bottom: 45px;
+    
+
+}
 .ToDoList
 ul {
   padding: 0px;
