--- a/src/ToDoList.css
+++ b/src/ToDoList.css
@@ -56,3 +56,21 @@
   background-color: #1c5c9c;
   font-size: 20px;
 }
+.ToDoList .Footer {
+  text-align: right;
+  margin-top: 80px;
+}
+
+.ToDoList .Footer button {
+  box-shadow: 8px 2px 8px rgb(28, 92, 156, 0.2);
+  border-radius: 4px;
+  background: rgb(169, 169, 169, 9%);
+  padding: 10px 20px;
+  color: #1c5c9c;
+  letter-spacing: 2px;
+  font-size: 18px;
+  transition: all 0.2s ease-out;
+}
+.ToDoList .Footer button:hover {
+  color: #68caea;
+}
