--- a/src/ToDoList.css
+++ b/src/ToDoList.css
@@ -56,12 +56,12 @@
   background-color: #1c5c9c;
   font-size: 20px;
 }
-.ToDoList .Footer {
+.ToDoList .button {
   text-align: right;
   margin-top: 80px;
 }
 
-.ToDoList .Footer button {
+.ToDoList .button .deleteAllTodosbutton {
   box-shadow: 8px 2px 8px rgb(28, 92, 156, 0.2);
   border-radius: 4px;
   background: rgb(169, 169, 169, 9%);
@@ -71,6 +71,6 @@
   font-size: 18px;
   transition: all 0.2s ease-out;
 }
-.ToDoList .Footer button:hover {
+.ToDoList .button button:hover {
   color: #68caea;
 }
